fix(TPLA-282): align cascade select caret right icon

--- a/packages/web/projects/web-components/src/components/forms/cascade-select/cascade-select.component.scss
+++ b/packages/web/projects/web-components/src/components/forms/cascade-select/cascade-select.component.scss
@@ -86,4 +86,8 @@
     .p-cascadeselect-item-content:focus {
     box-shadow: unset;
   }
+
+  .p-cascadeselect-group-icon {
+    display: flex;
+  }
 }
